# CliniTrace

./: .clinitrace_settings.json  .gitignore  LICENSE  README.md  RUN.md  SUBMISSION_README.md  demo_ltm.db  pyproject.toml  requirements.txt  shrink_prompt.ps1  streamlit_app.py
.streamlit/: config.toml
clinitrace/: __init__.py  __main__.py  cli.py  presentation.py
clinitrace/agents/: __init__.py  audit.py  orchestrator.py  refinement.py  spec_triage.py
clinitrace/hitl/: __init__.py  inbox.py  tickets.py
clinitrace/llm/: dispatcher.py  openai_client.py  stubs.py
clinitrace/memory/: ltm.py  stm.py
clinitrace/rule_kinds/: __init__.py  bin.py  compound.py  duration.py  errors.py  flag.py  risk_score.py
clinitrace/spec/: __init__.py  loader.py  model.py
clinitrace/ui/: __init__.py  about.py  glossary.py  llm_indicator.py  new_run_wizard.py  rule_preview.py  settings_store.py  streamlit_app.py  task_meta.py
clinitrace/verification/: __init__.py  coverage.py  findings.py
clinitrace/verification/properties/: bin.py  flag.py
docs/: DESIGN_DOCUMENT.md  PRESENTATION_TALK_TRACK.md
docs/screenshots/: CAPTURE_NOTES.md
examples/: demo_data.csv  demo_resolutions.json  demo_resolutions_ambiguous.json  demo_spec.yaml  demo_spec_ambiguous.yaml
examples/demo_datasets/: README.md  clean.csv  critical_labs.csv  garbled_labs.csv  negative_duration.csv  pediatric.csv  short_exposure.csv  unknown_response.csv
src/clinitrace/: cli.py  presentation.py
src/clinitrace/agents/: cg.py  refinement.py  spec_generator.py  spec_triage.py  sr.py
src/clinitrace/llm/: __init__.py  client.py
src/clinitrace/memory/: __init__.py  ltm.py
src/clinitrace/rule_kinds/: __init__.py  compound.py  flag.py  risk_score.py
src/clinitrace/spec/: model.py
src/clinitrace/ui/: __init__.py  about.py  llm_indicator.py  new_run_wizard.py  settings_store.py  streamlit_app.py  wallpaper.py
src/clinitrace/verification/: runner.py
src/clinitrace/verification/properties/: __init__.py
tests/: conftest.py  test_e2e.py  test_orchestrator_branches.py  test_orchestrator_retry_loop.py  test_presentation.py  test_refinement.py
tests/rule_kinds/: test_bin_apply.py  test_bin_body.py  test_flag_apply.py  test_flag_body.py
tests/verification/: test_runner.py
