[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinitrace"
version = "0.0.1"
description = "Agentic clinical-data transformation pipeline with HITL, DAG-based derivation, and traceable lineage."
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Milad Khaki" },
]
dependencies = [
    "pydantic>=2.6,<3",
    "pandas>=2.1",
    "pyarrow>=15",
    "pyyaml>=6",
]

[project.optional-dependencies]
gui = [
    "streamlit>=1.36",
    "streamlit-option-menu>=0.3.6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
