[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinitrace"
version = "0.0.1"
description = "Agentic clinical-data transformation pipeline with HITL, DAG-based derivation, and traceable lineage."
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Milad Khaki" },
]
dependencies = [
    "pydantic>=2.6,<3",
    "pandas>=2.1",
    "pyarrow>=15",
    "pyyaml>=6",
]

[project.optional-dependencies]
gui = [
    "streamlit>=1.36",
    "streamlit-option-menu>=0.3.6",
]
# Dev tooling lives here (instead of PEP 735 [dependency-groups]) because
# Streamlit Cloud's `uv`-based installer doesn't yet read [dependency-groups]
# and would skip these. Moving them under [project.optional-dependencies]
# keeps them installable via `pip install -e ".[dev]"` locally and out of
# the cloud build path.
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.5",
]

# Explicit src/ layout declaration. Without `package-dir`, Streamlit Cloud's
# `uv` installer was raising "error: Could not find root package
# `clinitrace`" because it was looking for a top-level `clinitrace/`
# directory and not respecting the src/ convention. The two-line block
# below tells every build backend (setuptools, uv, hatch, pip) that the
# package root lives in src/.
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["clinitrace*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
