[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinitrace"
version = "0.0.1"
description = "Agentic clinical-data transformation pipeline with HITL, DAG-based derivation, and traceable lineage."
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Milad Khaki" },
]
dependencies = [
    "pydantic>=2.6,<3",
    "pandas>=2.1",
    "pyarrow>=15",
    "pyyaml>=6",
    # Streamlit + the option-menu component are mandatory dependencies
    # so `uv sync` installs them on the first pass — Streamlit Cloud's
    # installer uses `uv sync` and would otherwise need a fallback
    # `uv pip install streamlit` step that adds ~30s to every cold
    # start and risks version drift from what uv.lock pins.
    "streamlit>=1.36",
    "streamlit-option-menu>=0.3.6",
]

[project.optional-dependencies]
# Dev tooling lives here (instead of PEP 735 [dependency-groups]) because
# Streamlit Cloud's `uv`-based installer doesn't yet read [dependency-groups]
# and would skip these. Moving them under [project.optional-dependencies]
# keeps them installable via `pip install -e ".[dev]"` locally and out of
# the cloud build path.
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.5",
]

# Flat layout: the `clinitrace/` package lives at the repo root, not under
# src/. We moved away from the src/ layout because Streamlit Cloud's `uv`
# installer was raising "error: Could not find root package `clinitrace`"
# during pre-build checks, even with explicit package-dir hints. The
# flat layout is the canonical default that every installer understands
# without coaxing.
[tool.setuptools.packages.find]
where = ["."]
include = ["clinitrace*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]
